dim/spec/test_input/invalid_input/hash_in_files.dim
Config:
    - originator: bla
      files:
            yeah: aa
            super: bb
      category: module
